loopdowhile.Poucet1.scala.error
Compilation error:
Poucet1:5: error: '(' expected but identifier found.
    if estSurBiscuit(){
       ^Poucet1:7: error: illegal start of simple expression
    }}
     ^